--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -55,7 +55,7 @@
       </a>
 
       <a
-        class="badge badge-primary no-underline"
+        class="badge badge-primary no-underline ml-2"
         *ngIf="hasCreatePermission"
         routerLink="{{ markerCreateUrl }}"
       >
