Unified image logic that the frontend determines the host

--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -37,7 +37,7 @@
         'col-sm-6': campaignData.length === 2 || campaignData.length === 4,
         'col-sm-4': campaignData.length === 3 || campaignData.length >= 5
       }"
-      [style.background-image]="'url(' + campaign.background_image + ')'"
+      [style.background-image]="'url(' + constants.wikiUrl + campaign.background_image + ')'"
     >
       <div class="campaign-overlay overlay-heading text-center">
         <h3 class="mb-0 px-3">{{ campaign.name }}</h3>
