Fixed bug in model (?)

--- a/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
+++ b/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
@@ -27,7 +27,8 @@
                     </div>
 
                     <div class="card-subtitle mb-2"> 
-                        {{ article.update_date | date }} 
+                        
+                        {{ article.update_datetime | date }} 
                         <div class="text-muted"> 
                             <span *ngIf="isDiaryEntry(article)"> {{article.author_details?.name}}'s </span>
                             {{ article.article_type}}
