--- a/src/app/components/utility/campaign/campaign.component.html
+++ b/src/app/components/utility/campaign/campaign.component.html
@@ -22,11 +22,11 @@
         <div class="card mb-5 mx-0 py-3 row flex-row">
             <div class="col-md-6 d-flex flex-column align-items-center">
                 <h3 class="text-center">Background</h3>
-                <img title="Campaign background image" class="gallery-image" [src]="articleData.background_image" alt="Background image of this campaign">
+                <img title="Campaign background image" class="gallery-image" [src]="constants.wikiUrl + articleData.background_image" alt="Background image of this campaign">
             </div>
             <div class="col-md-6 d-flex flex-column align-items-center">
                 <h3 class="text-center">Icon</h3>
-                <img title="Campaign Icon" class="gallery-image" [src]="articleData.icon" alt="Icon of this campaign">
+                <img title="Campaign Icon" class="gallery-image" [src]="constants.wikiMediaUrl + '/' + articleData.icon" alt="Icon of this campaign">
             </div>
 
             <div class="col-12 row mt-4">
