Changed how urls are displayed slightly

--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -27,7 +27,7 @@
                         </a>
 
                         <a 
-                        href="{{ constants.wikiUrl }}{{ sessionAudioFiles[audioIndex].download_url }}"
+                        href="{{ constants.wikiUrl }}/{{ sessionAudioFiles[audioIndex].download_url }}"
                         target="_blank"
                         class="text-center btn btn-dark"
                         > 
