Added number of encounters

--- a/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
+++ b/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
@@ -1,7 +1,7 @@
 <!-- Heading -->
 <div class="row">
     <h4 class="col"> 
-        Encounters
+        {{ encounters.length }} Encounters
         <app-tooltip-infocircle 
         [tooltipMessage]="'List of all encounters with ' + articleCharacter.name + '. Starts with the most recent encounter and ends with the latest.'"
         ></app-tooltip-infocircle>
