Moved individual add thing badges to use the new component for that

--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -54,15 +54,13 @@
         <i class="mx-1 icon fas fa-{{ marker.map_icon }}"></i>
       </a>
 
-      <a
-        class="badge badge-primary no-underline ml-2"
-        *ngIf="hasCreatePermission"
-        routerLink="{{ markerCreateUrl }}"
-      >
-        <!-- Add-Marker-Icon -->
-        <i class="fa fa-plus icon mx-1"></i>
-        Add marker
-      </a>
+      <!-- Add-Marker-Badge -->
+      <app-inline-create-button
+      [labelText]="'Add Marker'"
+      [link]="markerCreateUrl"
+      *ngIf="hasCreatePermission"
+      >     
+      </app-inline-create-button>
     </div>
 
     <!-- Description -->
