--- a/src/app/components/articles/character-article-update/character-article-update.component.html
+++ b/src/app/components/articles/character-article-update/character-article-update.component.html
@@ -23,11 +23,14 @@
                     <span class="ml-2 fa fa-trash icon" (click)="deletePlayerClassConnection(connection)"></span>
                 </span>
     
-                <span 
-                class="mx-3 fa fa-plus icon fa-1-5x" 
+                <!-- Add-Class-Badge -->
+                <app-inline-create-button
+                class="full-sized"
+                [labelText]="'Add Class'"
                 (click)="toggleConnectionCreateState()" 
                 *ngIf="!isCharacterConnectionCreationState; else connectionForm"
-                ></span>
+                >     
+                </app-inline-create-button>
             </div>    
         </div>
 
@@ -41,12 +44,15 @@
                     {{ membership.name }}
                     <span class="ml-2 fa fa-trash icon" (click)="deleteOrganizationMembership(membership)"></span>
                 </span>
-    
-                <span 
-                class="mx-3 fa fa-plus icon fa-1-5x" 
+                    
+                <!-- Add-Organization-Membership-Badge -->
+                <app-inline-create-button
+                class="full-sized"
+                [labelText]="'Add Membership'"
                 (click)="toggleOrganizationMembershipCreateState()" 
                 *ngIf="!isOrganizationMembershipCreationState; else organizationMembershipForm"
-                ></span>
+                >     
+                </app-inline-create-button>
             </div>    
         </div>
         <!-- Form -->
