Improved upon form for creating organization membership

--- a/src/app/components/articles/character-article-update/character-article-update.component.html
+++ b/src/app/components/articles/character-article-update/character-article-update.component.html
@@ -35,25 +35,31 @@
         </div>
 
         <!-- Memberships -->
-        <div *ngIf="isInUpdateState()">
-            <h4 class="mb-0"> Memberships </h4>
+        <div *ngIf="isInUpdateState()" class="mb-5">
+            <h4 class="mb-0"> 
+                <ng-container *ngIf="!isOrganizationMembershipCreationState; else createMembershipHeader">
+                    Organization Memberships
+                </ng-container>
+
+                 </h4>
             <hr class="white-separator">
-    
-            <div id="organizations" class="mb-5" *ngIf="userModel">
-                <span class="badge badge-secondary mr-3" *ngFor="let membership of userModel.organizations">
-                    {{ membership.name }}
-                    <span class="ml-2 fa fa-trash icon" (click)="deleteOrganizationMembership(membership)"></span>
-                </span>
-                    
-                <!-- Add-Organization-Membership-Badge -->
-                <app-inline-create-button
-                class="full-sized"
-                [labelText]="'Add Membership'"
-                (click)="toggleOrganizationMembershipCreateState()" 
-                *ngIf="!isOrganizationMembershipCreationState; else organizationMembershipForm"
-                >     
-                </app-inline-create-button>
-            </div>    
+            
+            <ng-container *ngIf="!isOrganizationMembershipCreationState; else createMembershipForm">
+                <div id="organizations" *ngIf="userModel">
+                    <span class="badge badge-secondary mr-3" *ngFor="let membership of userModel.organizations">
+                        {{ membership.name }}
+                        <span class="ml-2 fa fa-trash icon" (click)="deleteOrganizationMembership(membership)"></span>
+                    </span>
+                        
+                    <!-- Add-Organization-Membership-Badge -->
+                    <app-inline-create-button
+                    class="full-sized"
+                    [labelText]="'Add Membership'"
+                    (click)="toggleOrganizationMembershipCreateState()" 
+                    >     
+                    </app-inline-create-button>
+                </div>   
+            </ng-container> 
         </div>
         <!-- Form -->
         <h4 class="mb-0"> Character Data </h4>
@@ -108,20 +114,16 @@
     </form>
 </ng-template>
 
-<ng-template #organizationMembershipForm>
-    <!-- Form for creating Memberships to Organizations -->
-    <form class="d-inline-flex align-items-center" (submit)="createOrganizationMembership(membershipModel)">
-        <select class="form-control d-inline-block" name="membership" id="membership" [(ngModel)]="membershipModel.organization_id">
-            <option 
-            *ngFor="let organization of organizations" 
-            value="{{organization.pk}}" 
-            [attr.disabled]="hasMembership(organization) ? true : null"
-            >
-                {{organization.name}}
-            </option>
-        </select>
+<ng-template #createMembershipHeader>
+        Create Organization Membership
+</ng-template>
 
-        <i class="fa fa-times icon mx-2 fa-1-5x" (click)="toggleOrganizationMembershipCreateState()"></i>
-        <button type="submit"> <i class="fa fa-check icon fa-1-5x"></i> </button>
-    </form>
+<ng-template #createMembershipForm>
+    <!-- Form for creating Memberships to Organizations -->
+    <app-formly-formcontainer
+    [model]="membershipModel" 
+    [fields]="organizationFormlyFields" 
+    (formlySubmit)="createOrganizationMembership(membershipModel)" 
+    (formlyCancel)="toggleOrganizationMembershipCreateState()"
+    ></app-formly-formcontainer>
 </ng-template>
