Made button more consistent

--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -42,7 +42,7 @@
     <div class="mb-3">
       <i> Marked on Maps:</i>
       <a
-        class="badge badge-secondary mx-2 no-underline"
+        class="badge badge-secondary p-2 mx-2 no-underline"
         *ngFor="
           let marker of articleData.marker_details;
           let markerIndex = index
