--- a/src/app/components/utility/inline-create-button/inline-create-button.component.html
+++ b/src/app/components/utility/inline-create-button/inline-create-button.component.html
@@ -1,13 +1,13 @@
 <ng-container [ngSwitch]="badgeStyle">
   <ng-container *ngSwitchCase="styles.Text">
-    <div class="badge badge-primary pointer no-underline ml-2">
+    <div class="badge badge-primary pointer p-2 no-underline ml-2">
       <i class="fa fa-plus mx-1"></i>
       {{ labelText }}
     </div>
   </ng-container>
 
   <ng-container *ngSwitchCase="styles.Link">
-    <a class="badge badge-primary no-underline ml-2"  routerLink="{{ link }}" >
+    <a class="badge badge-primary p-2 no-underline ml-2"  routerLink="{{ link }}" >
     <i class="fa fa-plus mx-1"></i>
     {{ labelText }}
   </a>
