--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -158,14 +158,11 @@
           </form>
 
           <!-- Connection Create Icon-Buttons -->
-          <span
-            class="badge badge-primary pointer"
-            (click)="toggleEncounterConnectionCreationState()"
-            *ngIf="hasCreatePermission && !inEncounterConnectionCreationState"
-          >
-            <i class="fa fa-plus"></i>
-            Add Character
-          </span>
+          <app-inline-create-button
+          [labelText]="'Add Character'"
+          (click)="toggleEncounterConnectionCreationState()"
+          *ngIf="hasCreatePermission && !inEncounterConnectionCreationState"          >     
+          </app-inline-create-button>
         </div>
       </div>
 
