--- a/src/app/components/utility/object-list/object-list.component.html
+++ b/src/app/components/utility/object-list/object-list.component.html
@@ -10,6 +10,9 @@
         <li *ngFor="let item of items">
             <a routerLink="{{constants.wikiUrlFrontendPrefix}}/{{articleType}}/{{campaign}}/{{item.name}}">
                 {{item.name}}
+                <ng-container *ngIf="articleType === 'organizationCharacter'">
+                    ({{ item.role}})
+                </ng-container>
             </a>
         </li>
     </ul>
